PFFT: bugfix - add f03 subdir to Makefile.am
git-svn-id: https://svn.version.fz-juelich.de/scafacos/trunk@2842 5161e1c8-67bf-11de-9fd5-51895aff932f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS =
 
 # Enable Fortran subdirectory only on request.
 if ENABLE_FORTRAN
-SUBDIRS += fortran
+SUBDIRS += fortran f03
 endif
 
 # Directory of ipfft.h
