* PFFT: work on F03 interface
git-svn-id: https://svn.version.fz-juelich.de/scafacos/trunk@2847 5161e1c8-67bf-11de-9fd5-51895aff932f

--- a/tests/f03/Makefile.am
+++ b/tests/f03/Makefile.am
@@ -18,10 +18,7 @@ check_PROGRAMS =
 #if ENABLE_COMMON_PNFFT
 # do not compile checks
 #else
-# check_PROGRAMS += \
-# 	pfft_test 
+check_PROGRAMS += \
+	simple_check_c2c
 #endif
 
-# mostlyclean-local:
-# 	-rm -f subs.mod
-# 	-rm -f pfftmod.mod
