PFFT: change suffix of Fortran2003 tests, add some new tests

--- a/tests/f03/Makefile.am
+++ b/tests/f03/Makefile.am
@@ -10,7 +10,7 @@ LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@.la $(fftw3_mpi_LIBS) $
 # noinst_LTLIBRARIES = libtests.la
 
 # search for Fortran source files to build objects
-AM_DEFAULT_SOURCE_EXT = .f90
+AM_DEFAULT_SOURCE_EXT = .F03
 
 check_PROGRAMS = 
 
@@ -26,6 +26,8 @@ check_PROGRAMS += \
 	simple_check_ousam_c2c_4d_on_3d \
 	simple_check_ousam_c2c_4d_on_3d_transposed \
 	simple_check_ousam_r2c_4d_on_3d \
-	simple_check_ousam_r2c_4d_on_3d_transposed
+	simple_check_ousam_r2c_4d_on_3d_transposed \
+	time_c2c \
+	time_c2c_transposed
 #endif
 
