--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,9 +9,12 @@ manual_FILES = \
 	tutorial.tex \
 	features.tex \
 	bibliography.bib \
+	latex-manual.sh \
 	code/manual_min_c2c.c
 
 EXTRA_DIST = $(manual_FILES)
+
+if ENABLE_DOC
 if HAVE_LATEX
 EXTRA_DIST += manual.pdf
 endif
@@ -20,7 +23,7 @@ endif
 
 doc: manual
 manual: manual.pdf
-manual.pdf: $(manual_FILES) latex-manual.sh latexinc.sh
+manual.pdf: $(manual_FILES) latexinc.sh
 if HAVE_LATEX
 	sh latex-manual.sh
 else
@@ -36,3 +39,4 @@ MOSTLYCLEANFILES = \
 	manual.bbl manual.blg \
 	manual.idx manual.idx.bak manual.ilg manual.ind\
 	manual.log manual.out manual.toc manual.lof manual.lot manual.tdo
+endif
