--- a/api/pfftl.f03.in
+++ b/api/pfftl.f03.in
@@ -87,69 +87,52 @@
       type(C_PTR), value :: fftplan
     end subroutine pfftl_destroy_plan
     
-    subroutine pfftl_init_input_c2c_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftl_init_input_c2c_3d')
+    subroutine pfftl_init_input_complex_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftl_init_input_complex_3d')
       import
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
       complex(C_LONG_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_c2c_3d
+    end subroutine pfftl_init_input_complex_3d
     
-    subroutine pfftl_init_input_c2c(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftl_init_input_c2c')
+    subroutine pfftl_init_input_complex(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftl_init_input_complex')
       import
       integer(C_INT), value :: rnk_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       complex(C_LONG_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_c2c
+    end subroutine pfftl_init_input_complex
     
-    subroutine pfftl_init_input_r2c_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftl_init_input_r2c_3d')
+    subroutine pfftl_init_input_real_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftl_init_input_real_3d')
       import
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
       real(C_LONG_DOUBLE), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_r2c_3d
+    end subroutine pfftl_init_input_real_3d
     
-    subroutine pfftl_init_input_r2c(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftl_init_input_r2c')
+    subroutine pfftl_init_input_real(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftl_init_input_real')
       import
       integer(C_INT), value :: rnk_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       real(C_LONG_DOUBLE), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_r2c
+    end subroutine pfftl_init_input_real
     
-    subroutine pfftl_init_input_r2r_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftl_init_input_r2r_3d')
-      import
-      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
-      real(C_LONG_DOUBLE), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_r2r_3d
-    
-    subroutine pfftl_init_input_r2r(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftl_init_input_r2r')
-      import
-      integer(C_INT), value :: rnk_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
-      real(C_LONG_DOUBLE), dimension(*), intent(out) :: data
-    end subroutine pfftl_init_input_r2r
-    
-    real(C_LONG_DOUBLE) function pfftl_check_output_c2c_3d(Nos,local_n,local_n_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_c2c_3d_f03')
+    real(C_LONG_DOUBLE) function pfftl_check_output_complex_3d(Nos,local_n,local_n_start,data,comm) &
+                                 bind(C, name='pfftl_check_output_complex_3d_f03')
       import
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
       complex(C_LONG_DOUBLE_COMPLEX), dimension(*), intent(in) :: data
       integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_c2c_3d
+    end function pfftl_check_output_complex_3d
     
-    real(C_LONG_DOUBLE) function pfftl_check_output_c2c(rnk_n,Nos,local_n,local_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_c2c_f03')
+    real(C_LONG_DOUBLE) function pfftl_check_output_complex(rnk_n,Nos,local_n,local_start,data,comm) &
+                                 bind(C, name='pfftl_check_output_complex_f03')
       import
       integer(C_INT), value :: rnk_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
@@ -157,20 +140,20 @@
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       complex(C_LONG_DOUBLE_COMPLEX), dimension(*), intent(in) :: data
       integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_c2c
+    end function pfftl_check_output_complex
     
-    real(C_LONG_DOUBLE) function pfftl_check_output_c2r_3d(Nos,local_n,local_n_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_c2r_3d_f03')
+    real(C_LONG_DOUBLE) function pfftl_check_output_real_3d(Nos,local_n,local_n_start,data,comm) &
+                                 bind(C, name='pfftl_check_output_real_3d_f03')
       import
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
       real(C_LONG_DOUBLE), dimension(*), intent(in) :: data
       integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_c2r_3d
+    end function pfftl_check_output_real_3d
     
-    real(C_LONG_DOUBLE) function pfftl_check_output_c2r(rnk_n,Nos,local_n,local_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_c2r_f03')
+    real(C_LONG_DOUBLE) function pfftl_check_output_real(rnk_n,Nos,local_n,local_start,data,comm) &
+                                 bind(C, name='pfftl_check_output_real_f03')
       import
       integer(C_INT), value :: rnk_n
       integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
@@ -178,28 +161,7 @@
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       real(C_LONG_DOUBLE), dimension(*), intent(in) :: data
       integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_c2r
-    
-    real(C_LONG_DOUBLE) function pfftl_check_output_r2r_3d(Nos,local_n,local_n_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_r2r_3d_f03')
-      import
-      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
-      real(C_LONG_DOUBLE), dimension(*), intent(in) :: data
-      integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_r2r_3d
-    
-    real(C_LONG_DOUBLE) function pfftl_check_output_r2r(rnk_n,Nos,local_n,local_start,data,comm) &
-                                 bind(C, name='pfftl_check_output_r2r_f03')
-      import
-      integer(C_INT), value :: rnk_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
-      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
-      real(C_LONG_DOUBLE), dimension(*), intent(in) :: data
-      integer(@C_MPI_FINT@), value :: comm
-    end function pfftl_check_output_r2r
+    end function pfftl_check_output_real
     
     integer(C_INTPTR_T) function pfftl_local_size_dft_3d(Nos,comm_cart,pfft_flags,local_ni,local_i_start,local_no,local_o_start) &
                                  bind(C, name='pfftl_local_size_dft_3d_f03')
