pfft: remove unwritten tests

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,8 +21,8 @@ check_PROGRAMS = \
 
 check_PROGRAMS += \
 	simple_check_c2c simple_check_c2c_transposed \
-  simple_check_c2r simple_check_c2r_c2c simple_check_c2r_c2c_shifted simple_check_c2r_c2c_ousam simple_check_c2r_c2c_ousam_shifted \
-	simple_check_r2c simple_check_r2c_transposed simple_check_r2c_c2c \
+  simple_check_c2r_c2c simple_check_c2r_c2c_shifted simple_check_c2r_c2c_ousam_shifted \
+	simple_check_r2c simple_check_r2c_transposed \
 	simple_check_r2r simple_check_r2r_transposed
 
 
