add a simple check on newarray api

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -47,7 +47,8 @@ check_PROGRAMS += \
 	simple_check_c2c simple_check_c2c_transposed \
 	simple_check_c2r_c2c simple_check_c2r_c2c_shifted simple_check_c2r_c2c_ousam_shifted \
 	simple_check_r2c simple_check_r2c_transposed \
-	simple_check_r2r simple_check_r2r_transposed
+	simple_check_r2r simple_check_r2r_transposed \
+	simple_check_c2c_newarray
 
 
 #if ENABLE_COMMON_PFFT
