PFFT: clean up checks

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -58,7 +58,8 @@ check_PROGRAMS += \
 check_PROGRAMS += \
 	simple_check_ghost_c2c \
 	simple_check_ghost_c2c_3d_on_3d \
-	simple_check_ghost_c2r
+	simple_check_ghost_r2c_input \
+	simple_check_ghost_r2c_output
 
 check_PROGRAMS += \
 	time_c2c_3d_on_3d_transposed \
