--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -49,6 +49,7 @@ check_PROGRAMS += \
 	simple_check_ousam_c2r \
 	simple_check_ousam_r2c simple_check_ousam_r2c_transposed \
 	simple_check_ousam_r2r simple_check_ousam_r2r_transposed \
+	simple_check_ousam_r2c_padded \
 	simple_check_ousam_c2c_4d simple_check_ousam_c2c_4d_transposed
 
 check_PROGRAMS += \
