--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,29 +15,9 @@ AM_CPPFLAGS += -I$(top_srcdir)/api
 # Libraries to add to all programs that are built.
 LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@.la $(fftw3_mpi_LIBS) $(fftw3_LIBS)
 
-SCRIPT_FILES = build_checks.sh run_checks.sh
-
-EXTRA_DIST = $(SCRIPT_FILES)
-
-SYMLINK_FILES = $(SCRIPT_FILES)
-
-# Generate symbolic link to several files
-all-local: make-data-symlink
-make-data-symlink:
-	-@for s in $(SYMLINK_FILES) ; do \
-          if test "$(srcdir)" != . && test ! -r $${s}; then \
-            ln -s "$(srcdir)/$${s}" .; \
-          fi \
-        done
-
-distclean-local: clean-data-symlink
-clean-data-symlink:
-	-@if test "$(srcdir)" != .; then \
-	  rm -f $(SYMLINK_FILES) ; \
-	fi
-
-.PHONY: make-data-symlink clean-data-symlink
-
+EXTRA_DIST = \
+	build_checks.sh \
+	run_checks.sh
 
 # These programs are built by 'make check' and may be tested afterwards.
 check_PROGRAMS = \
@@ -49,9 +29,6 @@ check_PROGRAMS += \
 	simple_check_r2c simple_check_r2c_transposed \
 	simple_check_r2r simple_check_r2r_transposed
 
-#if ENABLE_COMMON_PFFT
-# do not compile checks
-#else
 check_PROGRAMS += \
 	simple_check_c2c_newarray simple_check_c2c_transposed_newarray \
 	simple_check_r2c_newarray simple_check_r2c_transposed_newarray \
@@ -97,5 +74,4 @@ check_PROGRAMS += \
 	time_c2c_3d_on_3d_transposed \
 	time_c2c \
 	time_c2c_transposed
-#endif
 
