work in progress

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,7 +22,8 @@ EXTRA_DIST = \
 # These programs are built by 'make check' and may be tested afterwards.
 check_PROGRAMS = \
 	manual_c2c_3d \
-	minimal_check_c2c minimal_check_c2c_transposed
+	minimal_check_c2c minimal_check_c2c_transposed \
+	man_fftw_3don1d
 
 check_PROGRAMS += \
 	simple_check_c2c simple_check_c2c_transposed \
